content/v1.3.0/zh/api/campaign/AllianceCampaignBehavior.md
---
title: "AllianceCampaignBehavior"
description: "AllianceCampaignBehavior 的自动生成类参考。"
---
# AllianceCampaignBehavior

**Namespace:** TaleWorlds.CampaignSystem.CampaignBehaviors
**Module:** TaleWorlds.CampaignSystem
**Type:** `public class AllianceCampaignBehavior : CampaignBehaviorBase, IAllianceCampaignBehavior`
**Base:** `CampaignBehaviorBase`
**File:** `TaleWorlds.CampaignSystem/CampaignBehaviors/AllianceCampaignBehavior.cs`

## 概述

`AllianceCampaignBehavior` 位于 `TaleWorlds.CampaignSystem.CampaignBehaviors`，它通过这组公开成员把对应子系统的状态、行为或流程入口暴露给 mod 开发者。阅读时先看属性代表“它持有什么状态”，再看方法代表“它允许你做什么”。

## 心智模型

先从命名空间 `TaleWorlds.CampaignSystem.CampaignBehaviors` 判断它属于哪层系统，再看公开方法：如果以 Get/Set 为主，它多半是状态对象；如果以 Create/Apply/Execute 为主，它更像服务或流程入口。

## 主要方法

### RegisterEvents
`public override void RegisterEvents()`

**用途 / Purpose:** 将「events」注册到当前系统，以便后续监听或分发。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.RegisterEvents();
```

### SyncData
`public override void SyncData(IDataStore dataStore)`

**用途 / Purpose:** 将「data」同步到相关上下文或系统中。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.SyncData(dataStore);
```

### OnCallToWarAgreementProposedByPlayerKingdom
`public void OnCallToWarAgreementProposedByPlayerKingdom(Kingdom proposedKingdom, Kingdom kingdomToCallToWarAgainst)`

**用途 / Purpose:** 在 「call to war agreement proposed by player kingdom」 事件触发时调用此回调。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.OnCallToWarAgreementProposedByPlayerKingdom(proposedKingdom, kingdomToCallToWarAgainst);
```

### IsAllyWithKingdom
`public bool IsAllyWithKingdom(Kingdom kingdom1, Kingdom kingdom2)`

**用途 / Purpose:** 判断当前对象是否处于 「ally with kingdom」 状态或条件。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
var result = allianceCampaignBehavior.IsAllyWithKingdom(kingdom1, kingdom2);
```

### StartAlliance
`public void StartAlliance(Kingdom proposerKingdom, Kingdom receiverKingdom)`

**用途 / Purpose:** 启动「alliance」流程或状态机。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.StartAlliance(proposerKingdom, receiverKingdom);
```

### EndAlliance
`public void EndAlliance(Kingdom kingdom1, Kingdom kingdom2)`

**用途 / Purpose:** 处理与 「end alliance」 相关的逻辑。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.EndAlliance(kingdom1, kingdom2);
```

### HasCalledToWar
`public bool HasCalledToWar(Kingdom callingKingdom, Kingdom calledKingdom)`

**用途 / Purpose:** 判断当前对象是否已经持有 「called to war」。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
var result = allianceCampaignBehavior.HasCalledToWar(callingKingdom, calledKingdom);
```

### IsAtWarByCallToWarAgreement
`public bool IsAtWarByCallToWarAgreement(Kingdom calledKingdom, Kingdom kingdomToCallToWarAgainst)`

**用途 / Purpose:** 判断当前对象是否处于 「at war by call to war agreement」 状态或条件。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
var result = allianceCampaignBehavior.IsAtWarByCallToWarAgreement(calledKingdom, kingdomToCallToWarAgainst);
```

### StartCallToWarAgreement
`public void StartCallToWarAgreement(Kingdom callingKingdom, Kingdom calledKingdom, Kingdom kingdomToCallToWarAgainst, int callToWarCost, bool isPlayerPaying = false)`

**用途 / Purpose:** 启动「call to war agreement」流程或状态机。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.StartCallToWarAgreement(callingKingdom, calledKingdom, kingdomToCallToWarAgainst, 0, false);
```

### EndCallToWarAgreement
`public void EndCallToWarAgreement(Kingdom callingKingdom, Kingdom calledKingdom, Kingdom kingdomToCallToWarAgainst)`

**用途 / Purpose:** 处理与 「end call to war agreement」 相关的逻辑。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.EndCallToWarAgreement(callingKingdom, calledKingdom, kingdomToCallToWarAgainst);
```

### GetKingdomsToCallToWarAgainst
`public List<Kingdom> GetKingdomsToCallToWarAgainst(Kingdom callingKingdom, Kingdom calledKingdom)`

**用途 / Purpose:** 读取并返回当前对象中 「kingdoms to call to war against」 的结果。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
var result = allianceCampaignBehavior.GetKingdomsToCallToWarAgainst(callingKingdom, calledKingdom);
```

### AutoGeneratedStaticCollectObjectsAlliance
`public static void AutoGeneratedStaticCollectObjectsAlliance(object o, List<object> collectedObjects)`

**用途 / Purpose:** 处理与 「auto generated static collect objects alliance」 相关的逻辑。

```csharp
// 静态调用，不需要实例
AllianceCampaignBehavior.AutoGeneratedStaticCollectObjectsAlliance(o, collectedObjects);
```

### AutoGeneratedStaticCollectObjectsCallToWarAgreement
`public static void AutoGeneratedStaticCollectObjectsCallToWarAgreement(object o, List<object> collectedObjects)`

**用途 / Purpose:** 处理与 「auto generated static collect objects call to war agreement」 相关的逻辑。

```csharp
// 静态调用，不需要实例
AllianceCampaignBehavior.AutoGeneratedStaticCollectObjectsCallToWarAgreement(o, collectedObjects);
```

## 使用示例

```csharp
// 通常从对应子系统 API 获取实例后调用
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.RegisterEvents();
```

## 参见

- [本区域目录](../)