content/v1.4.5/zh/api/campaign/AllianceCampaignBehavior.md
---
title: "AllianceCampaignBehavior"
description: "AllianceCampaignBehavior 的自动生成类参考。"
---
# AllianceCampaignBehavior

**Namespace:** TaleWorlds.CampaignSystem.CampaignBehaviors
**Module:** TaleWorlds.CampaignSystem
**Type:** `public class AllianceCampaignBehavior : CampaignBehaviorBase, IAllianceCampaignBehavior`
**Base:** `CampaignBehaviorBase`
**File:** `bin/TaleWorlds.CampaignSystem/TaleWorlds.CampaignSystem.CampaignBehaviors/AllianceCampaignBehavior.cs`

## 概述

`AllianceCampaignBehavior` 位于 `TaleWorlds.CampaignSystem.CampaignBehaviors`，它通过这组公开成员把对应子系统的状态、行为或流程入口暴露给 mod 开发者。阅读时先看属性代表“它持有什么状态”，再看方法代表“它允许你做什么”。

## 心智模型

先从命名空间 `TaleWorlds.CampaignSystem.CampaignBehaviors` 判断它属于哪层系统，再看公开方法：如果以 Get/Set 为主，它多半是状态对象；如果以 Create/Apply/Execute 为主，它更像服务或流程入口。

## 主要方法

### AutoGeneratedStaticCollectObjectsAlliance
`public static void AutoGeneratedStaticCollectObjectsAlliance(object o, List<object> collectedObjects)`

**用途 / Purpose:** **用途 / Purpose:** 调用 AutoGeneratedStaticCollectObjectsAlliance 对应的操作。

```csharp
// 静态调用，不需要实例
AllianceCampaignBehavior.AutoGeneratedStaticCollectObjectsAlliance(o, collectedObjects);
```

### AutoGeneratedStaticCollectObjectsCallToWarAgreement
`public static void AutoGeneratedStaticCollectObjectsCallToWarAgreement(object o, List<object> collectedObjects)`

**用途 / Purpose:** **用途 / Purpose:** 调用 AutoGeneratedStaticCollectObjectsCallToWarAgreement 对应的操作。

```csharp
// 静态调用，不需要实例
AllianceCampaignBehavior.AutoGeneratedStaticCollectObjectsCallToWarAgreement(o, collectedObjects);
```

### RegisterEvents
`public override void RegisterEvents()`

**用途 / Purpose:** **用途 / Purpose:** 将events注册到当前系统，以便后续监听或分发。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.RegisterEvents();
```

### SyncData
`public override void SyncData(IDataStore dataStore)`

**用途 / Purpose:** **用途 / Purpose:** 将data同步到相关上下文或系统中。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.SyncData(dataStore);
```

### OnAllianceOfferedToPlayer
`public void OnAllianceOfferedToPlayer(Kingdom offeringKingdom)`

**用途 / Purpose:** **用途 / Purpose:** 在 alliance offered to player 事件触发时调用此回调。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.OnAllianceOfferedToPlayer(offeringKingdom);
```

### OnAllianceOfferedToPlayerKingdom
`public void OnAllianceOfferedToPlayerKingdom(Kingdom offeringKingdom)`

**用途 / Purpose:** **用途 / Purpose:** 在 alliance offered to player kingdom 事件触发时调用此回调。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.OnAllianceOfferedToPlayerKingdom(offeringKingdom);
```

### OnCallToWarAgreementProposedToPlayer
`public void OnCallToWarAgreementProposedToPlayer(Kingdom proposerKingdom, Kingdom kingdomToCallToWarAgainst)`

**用途 / Purpose:** **用途 / Purpose:** 在 call to war agreement proposed to player 事件触发时调用此回调。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.OnCallToWarAgreementProposedToPlayer(proposerKingdom, kingdomToCallToWarAgainst);
```

### OnCallToWarAgreementProposedToPlayerKingdom
`public void OnCallToWarAgreementProposedToPlayerKingdom(Kingdom proposerKingdom, Kingdom kingdomToCallToWarAgainst)`

**用途 / Purpose:** **用途 / Purpose:** 在 call to war agreement proposed to player kingdom 事件触发时调用此回调。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.OnCallToWarAgreementProposedToPlayerKingdom(proposerKingdom, kingdomToCallToWarAgainst);
```

### OnCallToWarAgreementProposedByPlayer
`public void OnCallToWarAgreementProposedByPlayer(Kingdom proposedKingdom, Kingdom kingdomToCallToWarAgainst)`

**用途 / Purpose:** **用途 / Purpose:** 在 call to war agreement proposed by player 事件触发时调用此回调。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.OnCallToWarAgreementProposedByPlayer(proposedKingdom, kingdomToCallToWarAgainst);
```

### GetAllianceEndDate
`public CampaignTime GetAllianceEndDate(Kingdom kingdom1, Kingdom kingdom2)`

**用途 / Purpose:** **用途 / Purpose:** 读取并返回当前对象中 alliance end date 的结果。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
var result = allianceCampaignBehavior.GetAllianceEndDate(kingdom1, kingdom2);
```

### OnCallToWarAgreementProposedByPlayerKingdom
`public void OnCallToWarAgreementProposedByPlayerKingdom(Kingdom proposedKingdom, Kingdom kingdomToCallToWarAgainst)`

**用途 / Purpose:** **用途 / Purpose:** 在 call to war agreement proposed by player kingdom 事件触发时调用此回调。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.OnCallToWarAgreementProposedByPlayerKingdom(proposedKingdom, kingdomToCallToWarAgainst);
```

### IsAllyWithKingdom
`public bool IsAllyWithKingdom(Kingdom kingdom1, Kingdom kingdom2)`

**用途 / Purpose:** **用途 / Purpose:** 判断当前对象是否处于 ally with kingdom 状态或条件。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
var result = allianceCampaignBehavior.IsAllyWithKingdom(kingdom1, kingdom2);
```

### StartAlliance
`public void StartAlliance(Kingdom proposerKingdom, Kingdom receiverKingdom)`

**用途 / Purpose:** **用途 / Purpose:** 启动alliance流程或状态机。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.StartAlliance(proposerKingdom, receiverKingdom);
```

### EndAlliance
`public void EndAlliance(Kingdom kingdom1, Kingdom kingdom2)`

**用途 / Purpose:** **用途 / Purpose:** 调用 EndAlliance 对应的操作。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.EndAlliance(kingdom1, kingdom2);
```

### HasCalledToWar
`public bool HasCalledToWar(Kingdom callingKingdom, Kingdom calledKingdom)`

**用途 / Purpose:** **用途 / Purpose:** 判断当前对象是否已经持有 called to war。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
var result = allianceCampaignBehavior.HasCalledToWar(callingKingdom, calledKingdom);
```

### IsAtWarByCallToWarAgreement
`public bool IsAtWarByCallToWarAgreement(Kingdom calledKingdom, Kingdom kingdomToCallToWarAgainst, out Kingdom callingKingdom)`

**用途 / Purpose:** **用途 / Purpose:** 判断当前对象是否处于 at war by call to war agreement 状态或条件。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
var result = allianceCampaignBehavior.IsAtWarByCallToWarAgreement(calledKingdom, kingdomToCallToWarAgainst, callingKingdom);
```

### StartCallToWarAgreement
`public void StartCallToWarAgreement(Kingdom callingKingdom, Kingdom calledKingdom, Kingdom kingdomToCallToWarAgainst, int callToWarCost, bool isPlayerPaying = false)`

**用途 / Purpose:** **用途 / Purpose:** 启动call to war agreement流程或状态机。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.StartCallToWarAgreement(callingKingdom, calledKingdom, kingdomToCallToWarAgainst, 0, false);
```

### EndCallToWarAgreement
`public void EndCallToWarAgreement(Kingdom callingKingdom, Kingdom calledKingdom, Kingdom kingdomToCallToWarAgainst)`

**用途 / Purpose:** **用途 / Purpose:** 调用 EndCallToWarAgreement 对应的操作。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.EndCallToWarAgreement(callingKingdom, calledKingdom, kingdomToCallToWarAgainst);
```

### DenyCallToWarAgreement
`public void DenyCallToWarAgreement(Kingdom callingKingdom, Kingdom calledKingdom)`

**用途 / Purpose:** **用途 / Purpose:** 调用 DenyCallToWarAgreement 对应的操作。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
allianceCampaignBehavior.DenyCallToWarAgreement(callingKingdom, calledKingdom);
```

### GetKingdomsToCallToWarAgainst
`public List<Kingdom> GetKingdomsToCallToWarAgainst(Kingdom callingKingdom, Kingdom calledKingdom)`

**用途 / Purpose:** **用途 / Purpose:** 读取并返回当前对象中 kingdoms to call to war against 的结果。

```csharp
// 先通过子系统 API 拿到 AllianceCampaignBehavior 实例
AllianceCampaignBehavior allianceCampaignBehavior = ...;
var result = allianceCampaignBehavior.GetKingdomsToCallToWarAgainst(callingKingdom, calledKingdom);
```

## 使用示例

```csharp
AllianceCampaignBehavior.AutoGeneratedStaticCollectObjectsAlliance(o, collectedObjects);
```

## 参见

- [本区域目录](../)